--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
         "yiisoft/yii2-codeception": "2.0.0",
         "yiisoft/yii2-debug": "2.0.0",
         "yiisoft/yii2-gii": "2.0.0",
-        "yiisoft/yii2-faker": "2.0.0",
-         "psy/psysh":"@stable"
+        "yiisoft/yii2-faker": "2.0.0"
     },
     "config": {
         "process-timeout": 1800
