--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "yiisoft/yii2": "2.0.0",
         "yiisoft/yii2-bootstrap": "2.0.0",
         "yiisoft/yii2-swiftmailer": "2.0.0",
-        "2amigos/yii2-resource-manager-component": "*"
+        "kartik-v/yii2-widgets": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "2.0.0",
