--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "yiisoft/yii2-bootstrap": "2.0.0",
         "yiisoft/yii2-swiftmailer": "2.0.0",
         "rmrevin/yii2-fontawesome": "2.5.0",
-        "kartik-v/yii2-widgets": "*"
+        "kartik-v/yii2-widgets": "*",
+        "wbraganca/yii2-nested-set-behavior": "*",
+        "wbraganca/yii2-fancytree-widget": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "2.0.0",
