--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "rmrevin/yii2-fontawesome": "2.5.0",
         "kartik-v/yii2-widgets": "*",
         "wbraganca/yii2-nested-set-behavior": "*",
-        "wbraganca/yii2-fancytree-widget": "*"
+        "wbraganca/yii2-fancytree-widget": "*",
+        "omnilight/yii2-shopping-cart": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "2.0.0",
